Don't composite WebXR while there is a permission popup

Currently we will render both WebXR and UI, and composite the two.

Instead, WebXR should not be rendered while UI is visible.  This makes
compositing a simple texture copy instead of layering multiple textures,
so improves efficiency and (in the case that resolution is different)
improves quality.

BUG=912765

Change-Id: I0baa16411ba621c39305f7eea214f42157d506f9
Reviewed-on: https://chromium-review.googlesource.com/c/1404335
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621398}
Former-commit-id: 6e94be677fe74b077982fb69c06f566b526949f9