device/vr/windows/compositor_base.cc
@@ -314,8 +314,9 @@ void XRCompositorCommon::GetControllerDataAndSendFrameData(
 
   // We have posted a message to allow other calls to get through, and now state
   // may have changed.  WebXR may not be presenting any more, or may be hidden.
-  std::move(callback).Run(
-      is_presenting_ && webxr_visible_ ? std::move(frame_data) : nullptr);
+  std::move(callback).Run(is_presenting_ && webxr_visible_
+                              ? std::move(frame_data)
+                              : mojom::XRFrameData::New());
 }
 
 void XRCompositorCommon::SubmitOverlayTexture(
@@ -400,7 +401,9 @@ void XRCompositorCommon::SetOverlayAndWebXRVisibility(bool overlay_visible,
 
 void XRCompositorCommon::MaybeCompositeAndSubmit() {
   if (!pending_frame_) {
-    // There is no frame to composite.
+    // There is no outstanding frame, nor frame to composite, but there may be
+    // pending GetFrameData calls, so ClearPendingFrame() to respond to them.
+    ClearPendingFrame();
     return;
   }
 
